# dom-name-gen

./: .gitignore  README.md  generate_data.ipynb  main.py  pyproject.toml  report  test_trained_model.ipynb  train.ipynb
.dvc/: config
mlruns/0/: meta.yaml
mlruns/961639524632620381/: meta.yaml
mlruns/961639524632620381/0967efb4ca8d4f25bccb1bf9c7b848bf/: meta.yaml
mlruns/961639524632620381/0967efb4ca8d4f25bccb1bf9c7b848bf/artifacts/checkpoints/: adapter_config.json
mlruns/961639524632620381/0967efb4ca8d4f25bccb1bf9c7b848bf/metrics/: entropy  epoch  grad_norm  learning_rate  loss  mean_token_accuracy  num_tokens  total_flos  train_loss  train_runtime  train_samples_per_second  train_steps_per_second
mlruns/961639524632620381/0967efb4ca8d4f25bccb1bf9c7b848bf/outputs/m-5010b709da8b4824be5dadbbb188a69e/: meta.yaml
mlruns/961639524632620381/0967efb4ca8d4f25bccb1bf9c7b848bf/params/: logging_dir  output_dir
mlruns/961639524632620381/0967efb4ca8d4f25bccb1bf9c7b848bf/tags/: mlflow.runName
mlruns/961639524632620381/models/m-5010b709da8b4824be5dadbbb188a69e/: meta.yaml
trained_model/: .gitignore  adapter_config.json.dvc  adapter_model.safetensors.dvc
